Created front-end of definition list page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -530,3 +530,9 @@ img {
   padding: 1rem;
 }
 
+p.definition-sentence{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
